--- a/styles/global.css
+++ b/styles/global.css
@@ -196,3 +196,10 @@ body {
     background-position: -528px;
   }
 }
+
+#disparo {
+  width: 50px;
+  height: 8px;
+  position: absolute;
+  background-image: url(../assets/images/disparo.png);
+}
