--- a/styles/global.css
+++ b/styles/global.css
@@ -245,3 +245,21 @@ body {
   left: 800px;
   top: 7px;
 }
+
+#fim {
+  width: 350px;
+  height: 200px;
+  background-color: #fff;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  text-align: center;
+  padding: 10px;
+  font-family: "Roboto";
+}
+
+h3 {
+  font-family: Titulo;
+  font-size: 20px;
+  color: #603a03;
+}
